# usb-examples

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
device/usb-bulk-raspberry-pi-pico2/: Cargo.toml  rust-coolchain.toml  rust-toolchain.toml
device/usb-bulk-raspberry-pi-pico2/.helix/: languages.toml
device/usb-bulk-raspberry-pi-pico2/src/: main.rs
device/usb-bulk-stm32-nucleo-f429zi/: Cargo.toml  rust-coolchain.toml  rust-toolchain.toml
device/usb-bulk-stm32-nucleo-f429zi/.helix/: languages.toml
device/usb-bulk-stm32-nucleo-f429zi/.zed/: settings.json
device/usb-bulk-stm32-nucleo-f429zi/src/: main.rs
device/usb-bulk-stm32-nucleo-u545re/: .gitignore  Cargo.toml  rust-toolchain.toml
device/usb-bulk-stm32-nucleo-u545re/.cargo/: config.toml
device/usb-bulk-stm32-nucleo-u545re/.helix/: languages.toml
device/usb-bulk-stm32-nucleo-u545re/src/: main.rs
host/usb-bulk-python/: main.py
host/usb-bulk-rust/src/: main.rs
