[package]
name = "usb-bulk-stm32f429zi"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = "0.5.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
